--- a/airs/content/pages/products/rules/list/credentials/142/index.adoc
+++ b/airs/content/pages/products/rules/list/credentials/142/index.adoc
@@ -65,6 +65,11 @@ to detect improper configurations or missing patches.
 An adversary may try certain common or default usernames and passwords to gain
 access into the system and perform unauthorized actions.
 
+. [[r2]] link:http://capec.mitre.org/data/definitions/560.html[CAPEC-560: Use of Known Domain Credentials].
+An adversary guesses or obtains (i.e. steals or purchases) legitimate
+credentials (e.g. userID/password) to achieve authentication and to perform
+authorized actions under the guise of an authenticated user or service.
+
 . [[r2]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-007-6.pdf[NERC CIP-007-6. B. Requirements and measures. R5.4]
 Change known default passwords, per Cyber Asset capability.
 
