--- a/airs/content/pages/products/rules/list/cryptography/336/index.adoc
+++ b/airs/content/pages/products/rules/list/cryptography/336/index.adoc
@@ -57,6 +57,11 @@ This type of attack targets invalid assumptions that may be inherent in
 implementers of the protocol, incorrect implementations of the protocol,
 or vulnerabilities in the protocol itself.
 
+. [[r5]] link:http://capec.mitre.org/data/definitions/594.html[CAPEC-594: Traffic Injection].
+An adversary injects traffic into the target's network connection.
+The adversary is therefore able to degrade or disrupt the connection,
+and potentially modify the content.
+
 . [[r5]] link:https://cwe.mitre.org/data/definitions/319.html[CWE-319: Cleartext Transmission of Sensitive Information].
 The software transmits sensitive or security-critical data in cleartext in a
 communication channel that can be sniffed by unauthorized actors.
