skims\feat(back): #3355.3 add java printstacktrace
- add test data
- add description


Former-commit-id: 8ebc115001479a1a43e2e42f139675b97e6f7d6a

--- a/skims/static/translations/findings/F037.yaml
+++ b/skims/static/translations/findings/F037.yaml
@@ -1,6 +1,9 @@
 src.lib_path.f037.javascript_use_console_log:
   en: Using logging to show JavaScript exceptions in {path}
   es: Uso de logging para mostrar excepciones JavasScript en {path}
+src.lib_path.f037.java_logging_exceptions:
+  en: Using logging to show Java exceptions in {path}
+  es: Uso de logging para mostrar excepciones Javas en {path}
 utils.model.finding.enum.f037.description:
   en: >
     The system exposes technical information about the system to users who are
