airs\refac(front): #3172.1 new faq design
- First verison of the FAQ page design
- Re-write all the questions to make it easier to build an accordion
with all the questions
- Separate Careers FAQ to the main FAQ
- Create a template to build the accordion
- Created an accordion script to generate the elements individually


Former-commit-id: 97df83f0591bbc13d0b9d730ef8e6d39e2626a58

--- a/airs/content/pages/faq/index.adoc
+++ b/airs/content/pages/faq/index.adoc
@@ -1,11 +1,9 @@
 :slug: faq/
 :description: Here we present a Frequently Asked Questions (FAQ) section to give you a guide on our products, services, and selection process.
 :keywords: Fluid Attacks, Careers, Selection, Process, FAQ, Questions, Services, Products, Pentesting, Ethical Hacking
+:phrase: Find everything you need to know
+:faqindex: yes
+:template: faq
+:banner: bg-faq
 
 = Frequently Asked Questions (FAQ)
-
-Frequently asked questions about `Fluid Attacks'` products and solutions
-can be found link:../faq/clients/[*here*].
-
-If you have questions about `Fluid Attacks'` selection process,
-you might find the answers link:../careers/faq/[*here*].
