airs\refac(doc): #3514 rules fix references subs
- Seven Rules's References subtitles were corrected.


Former-commit-id: 087a8aaeec506e8eb1d4734a87807712bb90f27e

--- a/airs/content/pages/products/rules/list/data/321/index.adoc
+++ b/airs/content/pages/products/rules/list/data/321/index.adoc
@@ -25,7 +25,7 @@ it can lead to deserialization attacks such as object injection.
 
 * [inner]#link:/products/rules/findings/096/[F096. Insecure deserialization]#
 
-== Rereferences
+== References
 
 . [[r1]] link:http://capec.mitre.org/data/definitions/130.html[CAPEC-130: Excessive Allocation].
 An adversary causes the target to allocate excessive resources to servicing the
