--- a/airs/content/pages/products/rules/list/data/329/index.adoc
+++ b/airs/content/pages/products/rules/list/data/329/index.adoc
@@ -27,7 +27,7 @@ client-side storage.
 
 * [inner]#link:/products/rules/findings/085/[F085. Sensitive data stored in the client-side storage]#
 
-== Rereferences
+== References
 
 . [[r1]] link:http://capec.mitre.org/data/definitions/74.html[CAPEC-74: Manipulating State].
 The adversary modifies state information maintained by the target software or
