--- a/airs/content/pages/products/rules/list/source/359/index.adoc
+++ b/airs/content/pages/products/rules/list/source/359/index.adoc
@@ -21,7 +21,7 @@ as some special flows go unnoticed.
 
 * [inner]#link:/products/rules/findings/060/[F060. Insecure exceptions]#
 
-== Rereferences
+== References
 
 . [[r1]] link:https://cwe.mitre.org/data/definitions/396.html[CWE-396: Declaration of Catch for Generic Exception].
 Catching overly broad exceptions promotes complex error handling code that is
