--- a/airs/content/pages/products/rules/list/source/160/index.adoc
+++ b/airs/content/pages/products/rules/list/source/160/index.adoc
@@ -1,7 +1,7 @@
 :slug: products/rules/list/160/
 :category: source
 :description: This requirement establishes the importance of encoding system outputs in the corresponding language.
-:keywords: Encoding, Outputs, Escaping, BSIMM9, ASVS, CAPEC, CWE, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Encoding, Outputs, Escaping, ASVS, CAPEC, CWE, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R160. Encode system outputs
