airs\refac(cross): #3529 fix lifecycle expression
- Some sections' expression 'Life cycle' was changed to 'Lifecycle.'


Former-commit-id: 56f9d3c7da0ac1241eb32154c6af736b4131d0d8

--- a/airs/content/pages/careers/reasons/index.adoc
+++ b/airs/content/pages/careers/reasons/index.adoc
@@ -132,7 +132,7 @@ at different universities in Medellin,
 covering topics such as:
 
 * Information Security
-* Secure Development Life Cycle
+* Secure Development Lifecycle
 * Programming
 * Networks
 * Operating Systems
