--- a/airs/content/pages/products/rules/list/networks/253/index.adoc
+++ b/airs/content/pages/products/rules/list/networks/253/index.adoc
@@ -13,6 +13,10 @@ through user credentials and authorized `MAC` addresses.
 
 == References
 
-. [[r1]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 9.1.2]
+. [[r1]] link:https://www.cisecurity.org/controls/[CIS Controls. 1.7 Deploy Port Level Access Control].
+Utilize port level access control, following 802.1x standards, to control which
+devices can authenticate to the network.
+
+. [[r2]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 9.1.2]
 Users should only have access to the internal network and network
 services for which they have been explicitly authorized.
