--- a/airs/content/pages/products/rules/list/networks/257/index.adoc
+++ b/airs/content/pages/products/rules/list/networks/257/index.adoc
@@ -10,21 +10,25 @@
 
 Physical access to the network for users
 must be assigned based on organizational user credentials
-(e.g. +NAC+ +802,1x+).
+(e.g. **NAC 802.1x**).
 
 == References
 
-. [[r1]] link:https://www.law.cornell.edu/cfr/text/45/164.312[HIPAA Security Rules 164.312(e)(1):]
+. [[r1]] link:https://www.cisecurity.org/controls/[CIS Controls. 1.7 Deploy Port Level Access Control].
+Utilize port level access control, following 802.1x standards, to control which
+devices can authenticate to the network.
+
+. [[r2]] link:https://www.law.cornell.edu/cfr/text/45/164.312[HIPAA Security Rules 164.312(e)(1):]
 Transmission Security: Implement technical security measures
 to guard against unauthorized access
 to electronic protected health information
 that is being transmitted over an electronic communications network.
 
-. [[r2]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 9.1.2]
+. [[r3]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 9.1.2]
 Users should only have access to the internal network and network
 services for which they have been explicitly authorized.
 
-. [[r3]] link:https://nvd.nist.gov/800-53/Rev4/control/IA-2[NIST 800-53 IA-2]
+. [[r4]] link:https://nvd.nist.gov/800-53/Rev4/control/IA-2[NIST 800-53 IA-2]
 Identification and authentication:
 The information system uniquely identifies and authenticates
 organizational users (or processes acting on behalf of organizational users).
