skims\feat(back): #3530.4 add unrestricted cidrs
- add tests


Former-commit-id: 54ab24bd18330e6dbdd0d12b017b04b96e08b525

--- a/skims/static/translations/findings/F047_AWS.yaml
+++ b/skims/static/translations/findings/F047_AWS.yaml
@@ -1,5 +1,10 @@
+src.lib_path.f047_aws.unrestricted_cidrs:
+  en: The ingress/egress rules of the SecurityGroup use cidrs open to everyone.
+  es: >
+      Las reglas ingress/egress de los SecurityGroup usan cidrs abiertos a todo
+      el mundo.
 src.lib_path.f047_aws.unrestricted_ports:
-  en: SecurityGroup ingress/egress rules with port ranges.
+  en: The ingress/egress rules of the SecurityGroup use port ranges.
   es: Las reglas ingress/egress de los SecurityGroup usan rangos de puertos.
 utils.model.finding.enum.f047.description:
   en: >
