--- a/airs/content/pages/products/rules/list/system/363/index.adoc
+++ b/airs/content/pages/products/rules/list/system/363/index.adoc
@@ -22,15 +22,20 @@ to establish the event sequence that led the security incident.
 
 == References
 
-. [[r1]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 12.4.4]
+. [[r1]] link:https://www.cisecurity.org/controls/[CIS Controls. 6.1 Utilize Three Synchronized Time Sources].
+Use at least three synchronized time sources from which all servers and network
+devices retrieve time information on a regular basis so that timestamps in logs
+are consistent.
+
+. [[r2]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 12.4.4]
 Synchronize all information processing and security systems clocks using a
 single reference source.
 
-. [[r2]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.4.1]
+. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.4.1]
 Critical systems have the correct and consistent time.
 
-. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.4.2]
+. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.4.2]
 Time data is protected.
 
-. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.4.3]
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.4.3]
 Time settings are received from industry-accepted time sources.
