skims\feat(back): #3530.5 add allows_anyone_to_admin_ports
- add tests


Former-commit-id: 1955e0aa9c68f57ca65e74b7fc3e5c391feecf4d

--- a/skims/static/translations/findings/F047_AWS.yaml
+++ b/skims/static/translations/findings/F047_AWS.yaml
@@ -1,3 +1,10 @@
+src.lib_path.f047_aws.allows_anyone_to_admin_ports:
+  en: >
+    The ingress rules of the SecurityGroups allow access to administrative
+    ports to everyone.
+  es: >
+    Las reglas ingress de los SecurityGroups permiten el acceso a puertos
+    administrativos a todo el mundo.
 src.lib_path.f047_aws.unrestricted_cidrs:
   en: The ingress/egress rules of the SecurityGroup use cidrs open to everyone.
   es: >
