skims\feat(back): #3530.6 add unrestricted protocols
- add tests


Former-commit-id: a120e4d899fd12d2a92ecb9675d50fa03b61e1b9

--- a/skims/static/translations/findings/F047_AWS.yaml
+++ b/skims/static/translations/findings/F047_AWS.yaml
@@ -1,3 +1,10 @@
+src.lib_path.f047_aws.unrestricted_protocols:
+  en: >
+    The ingress/egress rules of the SecurityGroup allow the use of all ip
+    protocols.
+  es: >
+    Las reglas ingress/egress de los SecurityGroup permiten el uso de todos los
+    protocolos ip.
 src.lib_path.f047_aws.allows_anyone_to_admin_ports:
   en: >
     The ingress rules of the SecurityGroups allow access to administrative
