airs\feat(doc): #3271.5 add cis refs to some rules
- Added CIS Controls refs to R266, R258, R118 and R273
- Fixed some minor typos


Former-commit-id: 68429013b494c0298c76cd76a9dc964b7e92ba1f

--- a/airs/content/pages/products/rules/list/networks/258/index.adoc
+++ b/airs/content/pages/products/rules/list/networks/258/index.adoc
@@ -10,4 +10,10 @@
 
 The organization must filter the content of websites
 accessed from a location belonging to the same entity
-(Output +Proxy+).
+(Output 'Proxy').
+
+== References
+
+. [[r1]] link:https://www.cisecurity.org/controls/[CIS Controls. 7.7 Use of DNS Filtering Services].
+Use Domain Name System (DNS) filtering services to help block access to known
+malicious domains.
