--- a/airs/content/pages/products/rules/list/emails/118/index.adoc
+++ b/airs/content/pages/products/rules/list/emails/118/index.adoc
@@ -16,22 +16,30 @@ An anti-malware tool must scan files that are attached to an email.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/509.html[CWE-509: Replicating Malicious Code (Virus or Worm)].
+. [[r1]] link:https://www.cisecurity.org/controls/[CIS Controls. 7.9 Block Unnecessary File Types].
+Block all email attachments entering the organization’s email gateway if the
+file types are unnecessary for the organization’s business.
+
+. [[r2]] link:https://www.cisecurity.org/controls/[CIS Controls. 7.10 Sandbox All Email Attachments].
+Use sandboxing to analyze and block inbound email attachments with malicious
+behavior.
+
+. [[r3]] link:https://cwe.mitre.org/data/definitions/509.html[CWE-509: Replicating Malicious Code (Virus or Worm)].
 Replicating malicious code, including viruses and worms, will attempt to attack
 other systems once it has successfully compromised the target system or
 software.
 
-. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V10.1 Code Integrity Controls.(10.1.1)]
 Verify that a code analysis tool is in use that can detect potentially
 malicious code, such as time functions, unsafe file operations and network
 connections.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V12.4 File Storage Requirements.(12.4.2)]
 Verify that files obtained from untrusted sources are scanned by antivirus
 scanners to prevent upload of known malicious content.
 
-. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 5.1.1]
+. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 5.1.1]
 Ensure that anti-virus programs are capable of detecting, removing, and
 protecting against all known types of malicious software.
